--- a/css/style1.css
+++ b/css/style1.css
@@ -48,18 +48,13 @@ a, a:visited {
 }
 a:hover { color: #dc322f; }
 
-/* -------------------------------------------------------------------
-  COLORS
----------------------------------------------------------------------- */
+.category {
+	color: #7a477f;
+}
 
-.blue     {	color: #7A477F; }
-.cyan     { color: #2aa198; }
-.green    { color: #7a477f; }
-.magenta  { color: #000000; }
-.orange   { color: #cb4b16; }
-.red      { color: #dc322f; }
-.violet   { color: #6c71c4; }
-.yellow   { color: #b58900; }
+.pre {
+	color: #000000;
+}
 
 /* -------------------------------------------------------------------
   LAYOUT
