Add selectors to modal. Add chrome storage.

--- a/css/style0.css
+++ b/css/style0.css
@@ -16,6 +16,11 @@ body {
 	font-size: 15px;
 }
 
+#image {
+	background: url("../assets/0.jpg");
+	background-size: 876px 337px;
+}
+
 h3 {
 	display: inline;
 	padding-bottom: 5px;
