--- a/css/default.css
+++ b/css/default.css
@@ -1,3 +1,27 @@
+#edit {
+	width: auto;
+}
+
+#edit label {
+	margin-bottom: 10px;
+	display: flex;
+	justify-content: flex-end;
+}
+
+#edit label input {
+	margin-left: 5px;
+}
+
+#edit label .apply {
+	margin-left: 30px;
+}
+
+.theme-buttons {
+	display: flex;
+	justify-content: space-evenly;
+	margin-top: 15px;
+}
+
 html, 
 body,
 h3 {
@@ -10,14 +34,14 @@ h3 {
 ---------------------------------------------------------------------- */
 
 body {
-	background-color: #1B1D28;
+	background-color: #4b404b;
 	align-items: center;
 	font-family: "Inconsolata", monospace;
 	font-size: 15px;
 }
 
 #image {
-	background: url("../assets/2.jpg");
+	background: url("../assets/1.jpg");
 	background-size: 876px 337px;
 }
 
@@ -29,33 +53,21 @@ h3 {
 
 ul {
 	font-size: 20px;
-	list-style: none;    
-	color: #2aa198;
+	list-style: none;
 }
 
 li:before {
-	content: ">"; /* Insert content that looks like bullets */
+	content: ">";
 	padding-right: 8px;
-	color: #0B0B61; /* Or a color you prefer */
+	color: #0B0B61;
 }
 
 a, a:visited {
 	display: block;
 	padding-top: 2px;
-	color: #F2F4E8;
+	color: #2aa198;
 	font-weight: bold;
 	text-decoration: none;
-}
-a:hover {
-	color: #dc322f;
-}
-
-.category {
-	color: #F3765F;
-}
-
-.pre { 
-	color: #000000;
 }
 
 /* -------------------------------------------------------------------
@@ -72,19 +84,12 @@ a:hover {
 	height: auto;
 }
 
-#searchbox {
-	margin: 4px;
-	padding: 8px;
-	background-color: #552A34;
-	border: 5px solid #F03435;
-}
-
 #image {
 	margin: 4px;
 	width: 876px;
 	height: 337px;
-	background-color: #552A34;
-	border: 5px solid #F03435;
+	background-color: #7A477F;
+	border: 5px solid #7A477F;
 }
 
 #links {
@@ -107,9 +112,17 @@ pre {
   -moz-box-flex: 1;
   margin: 4px;
   padding: 8px;
-  background-color: #552A34;
-  border: 5px solid #F03435;
+  background-color: #221b21;
+  border: 5px solid #7A477F;
 }
+
+.box {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  margin: 4px;
+  padding: 8px;
+}
+
 
 /* -------------------------------------------------------------------
   TERMINAL
@@ -117,19 +130,13 @@ pre {
 
 .window {
 	width: 98%;
-	border: 5px solid #F03435;
 	margin: auto;
 }
 
 .window .terminal {
-	/* border: 5px solid #7A477F; */
-	/* margin: 5px; */
 	padding: 4px;
-	background-color: black;
-	opacity: 1;
+	opacity: 0.7;
 	height: 218px;
-	color: white;
-	font-family: "Inconsolata", monospace;
 	font-weight: 200;
 	font-size: 15px;
 	white-space: pre-wrap;
@@ -138,16 +145,15 @@ pre {
 }
 
 .window .terminal::after {
-	content: "_";
 	animation: blink 0.5s steps(1) infinite;
 }
 
 .prompt {
-	color: #F03435;
+	color: #2aa198;
 }
 
 .path {
-	color: #D82946;
+	color: #6c71c4;
 }
 
 @keyframes blink {
