--- a/css/style1.css
+++ b/css/style1.css
@@ -29,14 +29,13 @@ h3 {
 
 ul {
 	font-size: 20px;
-	list-style: none;    
-	color: #2aa198;
+	list-style: none;
 }
 
 li:before {
-	content: ">"; /* Insert content that looks like bullets */
+	content: ">";
 	padding-right: 8px;
-	color: #0B0B61; /* Or a color you prefer */
+	color: #0B0B61;
 }
 
 a, a:visited {
@@ -46,7 +45,10 @@ a, a:visited {
 	font-weight: bold;
 	text-decoration: none;
 }
-a:hover { color: #dc322f; }
+
+a:hover {
+	color: #dc322f;
+}
 
 .category {
 	color: #7a477f;
@@ -120,8 +122,6 @@ pre {
 }
 
 .window .terminal {
-	/* border: 5px solid #7A477F; */
-	/* margin: 5px; */
 	padding: 4px;
 	background-color: black;
 	opacity: 0.7;
